--- a/painogen/about/scss/style.scss
+++ b/painogen/about/scss/style.scss
@@ -98,20 +98,6 @@ body{
  /*..........header............*/
 
 
-
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
   
   
@@ -221,10 +207,21 @@ header {
       a{
           margin: 0;
           padding:0;
-          padding-left: 23px;
-          padding-right: 23px;
-          @include fontsStyle($font_1,16px,#262a2c);
+         // padding-left: 23px;
+         // padding-right: 23px;
+         // @include fontsStyle($font_1,16px,#262a2c);
+         // font-weight: 400;
+
+          font-family: Karla, Helvetica, Arial, sans-serif;
+          font-size: 16px;
           font-weight: 400;
+          font-style: normal;
+          letter-spacing: 0px;
+          line-height: 20px;
+          
+          text-transform: none;
+          color: #262a2c;
+          padding: 0 15px;
       }
       a:hover {
           color:#2b9100;
@@ -274,10 +271,10 @@ header {
 
   }
 
-  -moz-transition: all .3s linear;
-  -o-transition: all .3s linear;
- -webkit-transition: all .3s linear;
- transition: all .3s linear;
+  -moz-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+ -webkit-transition: all 0.5s linear;
+ transition: all 0.5s linear;
 
   &:hover{
     background:$color_6;
