--- a/painogen/scss/style.css
+++ b/painogen/scss/style.css
@@ -73,8 +73,12 @@ body {
   height: 25px;
   /* margin: 50px auto;*/
   -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer; }
 
@@ -88,8 +92,12 @@ body {
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
   transition: .25s ease-in-out; }
 
 #nav-icon1 span:nth-child(1) {
@@ -104,6 +112,8 @@ body {
 #nav-icon1.open span:nth-child(1) {
   top: 18px;
   -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
   transform: rotate(135deg); }
 
 #nav-icon1.open span:nth-child(2) {
@@ -113,6 +123,8 @@ body {
 #nav-icon1.open span:nth-child(3) {
   top: 18px;
   -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
   transform: rotate(-135deg); }
 
 /*my styles head*/
@@ -124,7 +136,6 @@ header {
 #headNav {
   padding-bottom: 34px;
   padding-top: 28px;
-  -webkit-transition: all 1s linear;
   transition: all 1s linear; }
 
 #headMenu {
@@ -166,6 +177,8 @@ header {
   height: 40px;
   border-radius: 50%;
   overflow: auto;
+  -moz-transition: all .3s linear;
+  -o-transition: all .3s linear;
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
   .headerIconeDiv img {
@@ -174,8 +187,7 @@ header {
     margin-top: 30%; }
   .headerIconeDiv:hover {
     background: #ffffff;
-    -webkit-box-shadow: 0px 0px 11px -2px #686161;
-            box-shadow: 0px 0px 11px -2px #686161; }
+    box-shadow: 0px 0px 11px -2px #686161; }
 
 /*Slider*/
 #section_1 {
@@ -261,32 +273,17 @@ header {
         left: 29%; } }
 
 .top_slid_text_content {
-  -webkit-animation: animationFramesW linear 1s;
-          animation: animationFramesW linear 1s;
-  -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-          transform-origin: 50% 50%; }
-
-@-webkit-keyframes animationFramesW {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate(-49px, 0px);
-            transform: translate(-49px, 0px); }
-  100% {
-    opacity: 1;
-    -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px); } }
+  animation: animationFramesW linear 1s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 50%; }
 
 @keyframes animationFramesW {
   0% {
     opacity: 0;
-    -webkit-transform: translate(-49px, 0px);
-            transform: translate(-49px, 0px); }
+    transform: translate(-49px, 0px); }
   100% {
     opacity: 1;
-    -webkit-transform: translate(0px, 0px);
-            transform: translate(0px, 0px); } }
+    transform: translate(0px, 0px); } }
 /*...... Out backgroun IMG 1......*/
 .bgCoIMG img {
   position: absolute; }
@@ -413,6 +410,13 @@ header {
       width: 52%;
       min-width: 300px; } }
 
+@media only screen and (max-width: 1600px) {
+  .contetn_text_part_section_3 {
+    margin-top: 53px; } }
+@media only screen and (max-width: 992px) {
+  .contetn_text_part_section_3 {
+    margin-top: 22px; } }
+
 .content_text_part_section_3 p {
   font-family: "poppinsRegular";
   font-size: 18px;
@@ -437,7 +441,6 @@ header {
   outline: none;
   border: none;
   cursor: pointer;
-  -webkit-transition: 0.3s;
   transition: 0.3s; }
   #btnPlay img {
     width: 29.46428571428571%;
@@ -447,12 +450,10 @@ header {
     margin-left: 40%; }
 
 #btnPlay:hover {
-  -webkit-box-shadow: 0px 0px 40px -4px #8a8d8b;
-          box-shadow: 0px 0px 40px -4px #8a8d8b; }
+  box-shadow: 0px 0px 40px -4px #8a8d8b; }
 
 #btnPlay:active {
-  -webkit-box-shadow: 0px 1px 4px -1px;
-          box-shadow: 0px 1px 4px -1px;
+  box-shadow: 0px 1px 4px -1px;
   background: #fff9f9e0; }
   #btnPlay:active img {
     width: 29%; }
@@ -729,7 +730,6 @@ header {
   height: 100%;
   background: #45b115b5;
   opacity: 0;
-  -webkit-transition: opacity 500ms ease-in-out;
   transition: opacity 500ms ease-in-out; }
 
 .img-container:hover .imgBlock_tab .overlay {
@@ -742,7 +742,6 @@ header {
     font-family: "kariaReguliar";
     font-size: 24px;
     color: #ffffff;
-    -webkit-transition: 0.5s;
     transition: 0.5s; }
   .overlay div a:nth-child(2) {
     margin-left: 9%; }
@@ -753,8 +752,7 @@ header {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   color: #fff; }
 
 /* Style the tab */
@@ -779,6 +777,7 @@ header {
   margin: 0;
   width: 100%;
   moz-transition: all .3s linear;
+  -o-transition: all .3s linear;
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
   .box p {
@@ -805,6 +804,7 @@ header {
     height: 2px;
     background: #2b9100;
     moz-transition: all .3s linear;
+    -o-transition: all .3s linear;
     -webkit-transition: all .3s linear;
     transition: all .3s linear; }
   .box:hover p > a {
@@ -835,12 +835,9 @@ header {
     margin-top: 145px;
     grid-template-columns: auto auto;
     grid-column-gap: 52px;
-    -webkit-animation: animationFrames linear 1s;
-            animation: animationFrames linear 1s;
-    -webkit-animation-iteration-count: 1;
-            animation-iteration-count: 1;
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%; }
+    animation: animationFrames linear 1s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%; }
     @media only screen and (max-width: 1650px) {
       #testimonialBlock .block_testimonial_main {
         margin-top: 5%; } }
@@ -853,11 +850,6 @@ header {
     @media only screen and (max-width: 754px) {
       #testimonialBlock .block_testimonial_main {
         grid-template-columns: auto; } }
-@-webkit-keyframes animationFrames {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
 @keyframes animationFrames {
   0% {
     opacity: 0; }
@@ -914,7 +906,6 @@ header {
       height: 64px;
       border: 4px solid #ffffff;
       border-radius: 50%;
-      -webkit-transition: all .3s linear;
       transition: all .3s linear;
       cursor: pointer; }
 
@@ -969,6 +960,7 @@ header {
       font-size: 25px;
       color: #ffffff;
       moz-transition: all .3s linear;
+      -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
       transition: all .3s linear; }
     #subscribe_section > div .socIcons a:hover {
@@ -1007,8 +999,7 @@ header {
   border-radius: .50rem;
   position: absolute;
   right: 0%;
-  -webkit-box-shadow: 0px 0px 13px 0px #1b1919;
-          box-shadow: 0px 0px 13px 0px #1b1919;
+  box-shadow: 0px 0px 13px 0px #1b1919;
   font-family: "kariaitali";
   font-size: 24.11px;
   color: #ffffff;
@@ -1066,7 +1057,6 @@ footer {
       font-family: "kariaReguliar";
       font-size: 20px;
       color: #9ca9b1;
-      -webkit-transition: all .3s linear;
       transition: all .3s linear;
       padding: .5rem 1rem;
       padding-left: 0.1rem; }
@@ -1100,6 +1090,8 @@ footer {
     font-family: "kariaReguliar";
     font-size: 16px;
     color: #727f88;
+    -moz-transition: all .3s linear;
+    -o-transition: all .3s linear;
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
     text-decoration: none; }
@@ -1118,7 +1110,6 @@ footer {
     font-size: 2rem;
     color: #727f88;
     margin: 0 2%;
-    -webkit-transition: all .3s linear;
     transition: all .3s linear;
     display: block;
     text-align: right; }
