--- a/painogen/scss/style.scss
+++ b/painogen/scss/style.scss
@@ -54,20 +54,6 @@ body{
  /*..........header............*/
 
 
-
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
   
   
@@ -177,10 +163,21 @@ body{
         a{
             margin: 0;
             padding:0;
-            padding-left: 23px;
-            padding-right: 23px;
-            @include fontsStyle($font_1,16px,#262a2c);
+           // padding-left: 23px;
+           // padding-right: 23px;
+           // @include fontsStyle($font_1,16px,#262a2c);
+           // font-weight: 400;
+
+            font-family: Karla, Helvetica, Arial, sans-serif;
+            font-size: 16px;
             font-weight: 400;
+            font-style: normal;
+            letter-spacing: 0px;
+            line-height: 20px;
+            
+            text-transform: none;
+            color: #262a2c;
+            padding: 0 15px;
         }
         a:hover {
             color:#2b9100;
@@ -230,10 +227,10 @@ body{
 
     }
 
-    -moz-transition: all .3s linear;
-    -o-transition: all .3s linear;
-   -webkit-transition: all .3s linear;
-   transition: all .3s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+   -webkit-transition: all 0.5s linear;
+   transition: all 0.5s linear;
 
     &:hover{
       background:$color_6;
@@ -249,6 +246,25 @@ body{
 #section_1 {
   margin-top: 140px;
   
+  @media only screen and (max-width: 1200px) {
+    margin-top: 50px;
+    width: 825px;
+   }
+
+   @media only screen and (max-width: 992px) {
+   
+    width: 600px;
+   }
+   
+
+   
+   @media only screen and (max-width: 600px) {
+   
+    width: 300px;
+   }
+   
+
+
   @media only screen and (max-width: 600px) {
     width: 4%;
     min-width: 300px;;
@@ -294,22 +310,22 @@ body{
    text-align: center;
     @include fontsStyle($font_2,95px,$color_2);
 
+    @media only screen and (max-width: 1200px) {
+      font-size: 70px;
+     }
+
     @media only screen and (max-width: 992px) {
-      font-size: 80px;
+      font-size: 60px;
      }
 
     
-
-    @media only screen and (max-width: 449px) {
-      font-size: 50px;
-     
-  }
-
- 
-
-     @media only screen and (max-width: 449px) {
+     @media only screen and (max-width: 992px) {
       font-size: 50px;
      }
+
+   
+ 
+
   }
 
   
@@ -339,34 +355,46 @@ body{
 
   #bnuttons_topSlider{
     position: absolute;
-   
-
-    @media only screen and (max-width: 992px) {
-      right: 0;
-    }
-
-    @media only screen and (max-width: 576px) {
-     
-      grid-template-columns: 23px 23px 23px 23px;
-      grid-column-gap: 5%;
-      top: 180%;
-      left: 37%;
-     }
-
-
-     @media only screen and (max-width: 320px) {
-     
-      
-      left: 29%;
-     }
-
-   
-
     @extend .grid;
     grid-template-columns: auto auto auto auto;
     grid-column-gap: 13px;
     top: 152%;
     right:0%;
+
+   
+
+    
+
+
+     
+    @media only screen and (max-width: 1200px) {
+     
+      top: 170%;
+     
+     }
+
+     @media only screen and (max-width: 992px) {
+      right: 0;
+      top: 190%;
+    }
+
+    @media only screen and (max-width: 600px) {
+      width: 169px;
+      left: 59px;
+      grid-column-gap: 13px;
+    }
+
+
+    @media only screen and (max-width: 576px) {
+     
+      
+      
+     
+     }
+
+   
+
+    
   }
 
 }
