--- a/painogen/css/style.css
+++ b/painogen/css/style.css
@@ -893,23 +893,23 @@ header {
 
 #navTabBlock {
   width: 39%;
-   /*@media only screen and (max-width: 992px) {
-      width: 50%;
-    }
-
-    @media only screen and (max-width: 767px) {
-      width: 100%;
-    }
-
-   @media only screen and (max-width: 998px) {
-    ul{
-      max-width: 374px;
-    margin: 0 auto;
-    }
-   }*/ }
+  /*
+      @media only screen and (max-width: 767px) {
+        width: 100%;
+      }
+  
+     @media only screen and (max-width: 998px) {
+      ul{
+        max-width: 374px;
+      margin: 0 auto;
+      }
+     }*/ }
   @media only screen and (max-width: 1190px) {
     #navTabBlock {
       width: 51%; } }
+  @media only screen and (max-width: 992px) {
+    #navTabBlock {
+      width: 381px; } }
   #navTabBlock .nav-pills .nav-link, #navTabBlock .nav-pills .show > .nav-link {
     text-transform: capitalize;
     font-family: "poppinsRegular";
@@ -1379,6 +1379,12 @@ footer {
         font-size: 12px;
         color: #626262;
         line-height: 25px; } }
+  @media only screen and (max-width: 992px) {
+    footer .logoFooter {
+      width: 15%; }
+    footer .textfooterCont {
+      margin-top: 25px;
+      width: 40%; } }
   footer .style_h3 {
     font-family: "kariaReguliar";
     font-size: 22px;
@@ -1508,4 +1514,5 @@ footer {
 
 .partner_img {
   padding-top: 14px; }
+
 /*# sourceMappingURL=style.css.map */
