--- a/painogen/scss/style.scss
+++ b/painogen/scss/style.scss
@@ -168,10 +168,11 @@ body{
 
 
  #headNav{
-    padding-bottom: 34px;
-   padding-top: 28px;
+  //  padding-bottom: 34px;
+  // padding-top: 28px;
   //height: 100px;
-    
+  padding-bottom: 25px;
+   padding-top: 25px;
    
   transition: opacity 1s;
  
