--- a/painogen/scss/style.scss
+++ b/painogen/scss/style.scss
@@ -145,6 +145,11 @@ body{
     transform: rotate(-135deg);
   }
 
+
+  .nav-icon_1 {
+    position: relative;
+    right: -2%;
+  }
   
 
   /*my styles head*/
@@ -175,7 +180,11 @@ body{
    padding-top: 25px;
    
   transition: opacity 1s;
- 
+
+  @media only screen and (max-width: 991px) {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 
 }
 
@@ -230,9 +239,9 @@ body{
 
 
   #navbarNav_2{
-      width: 261px;
+      width: 186px;
       position: absolute;
-      right: 5%;
+      right: -2px;
       @media only screen and (max-width: 1147px) {
         
       }
@@ -402,7 +411,8 @@ body{
     @extend .grid;
     grid-template-columns: auto auto auto auto;
     grid-column-gap: 13px;
-    top: 123%;
+    //top: 123%;
+    top: 156%;
     right:0%;
 
    
@@ -411,31 +421,23 @@ body{
 
 
      
-    @media only screen and (max-width: 1200px) {
+    @media only screen and (max-width: 1300px) {
      
-      top: 127%;
+      top: 170%;
      
      }
 
-     @media only screen and (max-width: 992px) {
-      right: 0;
-      top: 136%;
-    }
+    
 
     @media only screen and (max-width: 600px) {
       width: 169px;
       left: 59px;
       grid-column-gap: 13px;
-      top: 170%;
+     
     }
 
 
-    @media only screen and (max-width: 576px) {
-     
-      
-      
-     
-     }
+    
 
    
 
@@ -509,6 +511,10 @@ body{
   @media only screen and (max-width: 1190px) {
     width: 750px;
   }
+
+  @media only screen and (max-width: 767px) {
+    width: 400px;
+  }
   /*
   @media only screen and (max-width: 767px) {
     width: 52%;
@@ -528,6 +534,12 @@ body{
       position: static;
       
     }
+
+    @media only screen and (max-width: 767px) {
+      width: 100%;
+      
+      
+    }
     /*@media only screen and (max-width: 1600px) {
       width: 180%;
       left: -60%;
@@ -543,6 +555,13 @@ body{
 }
 
 
+.contetn_text_part_section_2 {
+  
+  @media only screen and (max-width: 767px) {
+      
+   margin-top: 30px;
+}
+}
 
 .content_textHeader_part_section_2 {
   width: 59%;
@@ -664,6 +683,11 @@ body{
     
   }
 
+  @media only screen and (max-width: 767px) {
+    width: 400px;
+   
+  }
+
   
  /* @media only screen and (max-width: 1600px) {
     width: 825px;
@@ -741,6 +765,12 @@ body{
     width: 528px;
   }
   position: relative;
+
+  @media only screen and (max-width: 767px) {
+   margin-top: 30px;
+   
+  }
+
 }
 
 #btnPlay {
@@ -817,12 +847,14 @@ body{
     margin-top: 150px;
     
   }
-/*
-  @media only screen and (max-width: 992px) {
-    width: 600px;
-    margin-top: 70px;
-  }
 
+  
+
+  @media only screen and (max-width: 767px) {
+    width: 400px;
+    margin-top: 140px;
+  }
+/*
   @media only screen and (max-width: 767px) {
     width: 52%;
     min-width: 300px;
@@ -832,6 +864,11 @@ body{
 //...........section 4 global style 
 
 // text part
+
+
+.contetn_text_part_1 {
+  margin-top: 30px;
+}
 
 .content_textHeader_part  {
   h2{
@@ -1066,9 +1103,14 @@ body{
     margin-top: 130px;
   }
 
+  @media only screen and (max-width: 767px) {
+    margin-top: 140px;
+  }
  
  
 }
+
+
 
 .content_textHeader_part_2 {
   margin-top: 175px;
@@ -1112,6 +1154,14 @@ body{
 }
 
 
+// img 
+
+.content_img_part_2 {
+  margin-top: 30px;
+}
+
+
+
  // ..............section 5  ............. 
 
 
@@ -1135,6 +1185,12 @@ margin-top: 221px;
       margin-top: 20px;
    
   }
+
+  @media only screen and (max-width: 767px) {
+    
+    margin-top: 30px;
+ 
+}
   
    
  }
@@ -1205,6 +1261,11 @@ margin-top: 221px;
     margin-top: 180px;
    }
 
+   @media only screen and (max-width: 767px) {
+    width: 400px;
+    margin-top: 150px;
+   }
+
 }
 
 
@@ -1229,13 +1290,13 @@ margin-top: 221px;
     width: 750px;
     margin-top: 150px;
    }
-/*
-   @media only screen and (max-width: 992px) {
-    width: 600px;
-    margin-top: 70px;
-   }
 
    @media only screen and (max-width: 767px) {
+    width: 400px;
+    margin-top: 140px;
+   }
+
+   /*@media only screen and (max-width: 767px) {
     width: 52%;
     min-width: 300px;
    }*/
@@ -1290,6 +1351,15 @@ margin-top: 221px;
    width: 91%;
    }
 }
+
+
+//img
+
+
+.content_img_part_4 {
+  margin-top: 30px;
+}
+
 
 
  /*...... <!-- ...... paralax end out bg image ......--> ......*/
@@ -1347,11 +1417,10 @@ margin-top: 221px;
  @media only screen and (max-width: 1190px) {
    width: 750px;
    }
-   /*
-   @media only screen and (max-width: 1199px) {
-    margin-top: 70px;
    
-   }*/
+   @media only screen and (max-width: 767px) {
+    width: 400px;
+   }
  }
 
 #navTabBlock {
@@ -1390,12 +1459,12 @@ margin-top: 221px;
     @media only screen and (max-width: 1190px) {
      font-size: 18px;
     }
-/*
-    @media only screen and (max-width: 998px) {
+
+    @media only screen and (max-width: 767px) {
       font-size: 15px;
      }
 
-     @media only screen and (max-width: 337px) {
+    /* @media only screen and (max-width: 337px) {
      // font-size: 14px
      }*/
 
@@ -1419,8 +1488,8 @@ margin-top: 221px;
       font-size: 18px;
      }
 
-     @media only screen and (max-width: 337px) {
-      //font-size: 14px
+     @media only screen and (max-width: 767px) {
+      font-size: 15px;
      }
  }
 
@@ -1548,6 +1617,9 @@ margin-top: 221px;
       font-size: 18px;
       padding-left: 16%;
      }
+     @media only screen and (max-width: 767px) {
+      font-size: 15px;
+     }
 
       /*@media only screen and (max-width: 998px) {
         font-size: 20px;
@@ -1599,15 +1671,21 @@ margin-top: 221px;
   background-image: url('../img/testimonial/BG_testimonial.png');
 
  
-  @media only screen and (max-width: 754px) {
+  /*@media only screen and (max-width: 754px) {
    background-image: none;
-    }
+    }*/
 
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: -34px;
   height: 497px;
 
+
+  @media only screen and (max-width: 767px) {
+    background-image: none;
+    background: #efeded;
+    
+    }
 
   .block_testimonial_main {
     max-width: 1139px;
@@ -1627,6 +1705,14 @@ margin-top: 221px;
         width: 715px;
          
         }
+
+
+        @media only screen and (max-width: 767px) {
+          width: 400px;
+          
+          }
+
+
     @extend .grid;
     grid-template-columns: auto auto;
     grid-column-gap: 52px;
@@ -1635,8 +1721,8 @@ margin-top: 221px;
     animation-iteration-count: 1;
     transform-origin: 50% 50%;
 
-    @media only screen and (max-width: 754px) {
-      grid-template-columns: auto;
+    @media only screen and (max-width: 767px) {
+      grid-template-columns: 1fr;
     }
      
   }
@@ -1657,13 +1743,21 @@ margin-top: 221px;
     img{
       border-radius: 50%;
       border: 13px solid $color_6;
-      @media only screen and (max-width: 754px) {
-        display: block;
-        margin: 0 auto;
+    
+      @media only screen and (max-width: 767px) {
+       display: block;
+       margin: 0 auto;
+       border:9px solid $color_6;
       }
+
     }
 
-   
+    @media only screen and (max-width: 767px) {
+      width: 40%;
+      margin: 0 auto;
+    }
+    
+
     }
   }
 
@@ -1687,6 +1781,11 @@ margin-top: 221px;
       @media only screen and (max-width: 1300px) {
         font-size: 18px;
       }
+
+      @media only screen and (max-width: 767px) {
+        text-align: center;
+      }
+
     }
     p{
       @include fontsStyle($font_3,$size_7,$color_4);
@@ -1699,6 +1798,9 @@ margin-top: 221px;
 
       @media only screen and (max-width: 1190px) {
         font-size: 12px;
+      }
+      @media only screen and (max-width: 767px) {
+        text-align: center;
       }
     }
 
@@ -1747,6 +1849,10 @@ margin-top: 221px;
      margin-top: -25px;
      }
     
+     @media only screen and (max-width: 767px) {
+      margin-left: 37%;
+       margin-top: 18px;
+    }
 
     
      
@@ -1789,6 +1895,10 @@ margin-top: 221px;
   padding-top: 40px;
   padding-bottom: 50px;
   margin-top: 70px;
+  @media only screen and (max-width: 767px) {
+   padding-bottom: 70px;
+  
+   }
 }
 
 #subscribe_section>div {
@@ -1809,6 +1919,11 @@ margin-top: 221px;
   
    }
 
+   @media only screen and (max-width: 767px) {
+    width: 400px;
+  
+   }
+
    /*@media only screen and (max-width: 450px) {
     max-width:277px;
   
@@ -1818,6 +1933,7 @@ margin-top: 221px;
   margin:0 auto;
   @extend .grid;
   grid-template-columns: 521px auto;
+
   @media only screen and (max-width: 1440px) {
     grid-template-columns: 524px auto;
  }
@@ -1833,6 +1949,11 @@ margin-top: 221px;
 
  @media only screen and (max-width: 1300px) {
   grid-template-columns: auto auto;
+
+ }
+
+ @media only screen and (max-width: 767px) {
+  grid-template-columns: auto;
 
  }
 
@@ -1853,6 +1974,11 @@ margin-top: 221px;
 
   @media only screen and (max-width: 1190px) {
     font-size: 12px;
+ }
+
+ @media only screen and (max-width: 767px) {
+  text-align: left;
+  font-size: 10.6px;
  }
 
   }
@@ -1934,6 +2060,12 @@ margin-top: 221px;
 
   }
 
+  @media only screen and (max-width: 767px) {
+    left:0;
+   
+
+  }
+
 }
 
 #join_btn{
@@ -1963,12 +2095,25 @@ margin-top: 221px;
   font-size: 16px;
   }
 
+
+  @media only screen and (max-width: 767px) {
+    right: 13%;
+
+  }
+
 }
 
 
 
 #subscribe>h2:nth-child(1){
   text-align: right;
+}
+
+@media only screen and (max-width: 767px) {
+  #subscribe>h2:nth-child(1){
+    text-align: left;
+  }
+
 }
 
   /*...........F O O T E R ...............*/
@@ -1992,6 +2137,12 @@ margin-top: 221px;
 
      @media only screen and (max-width: 1190px) {
       width: 750px;
+     
+     }
+
+
+     @media only screen and (max-width: 767px) {
+      width: 430px;
      
      }
 
@@ -2040,6 +2191,22 @@ margin-top: 221px;
    }
 
 
+   @media only screen and (max-width: 1300px) {
+    .logoFooter{
+      width: 73%;
+    }
+  
+    .textfooterCont {
+      margin-top: 15px;
+      width: 100%;
+      p{
+    
+        @include fontsStyle($font_1,14px,#626262);
+        line-height: 28px;
+      }
+    }
+   
+   }
 
 
   @media only screen and (max-width: 1190px) {
@@ -2074,6 +2241,15 @@ margin-top: 221px;
    
    }
 
+
+   @media only screen and (max-width:767px) {
+    .logoFooter{
+      width: 28%;
+    }
+  
+    
+   
+   }
 
 
     /* Nav footer*/
@@ -2201,6 +2377,16 @@ padding-top: 40px;
 }
 
 
+
+@media only screen and (max-width: 1300px) {
+  
+  #last_text_footer {
+    font-size: 13.4px;
+  }
+  
+ }
+
+
 @media only screen and (max-width: 1190px) {
   
   #last_text_footer {
@@ -2218,6 +2404,15 @@ padding-top: 40px;
   padding-left: 8.51vw;
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto;
+
+
+  @media only screen and (max-width: 767px) {
+    
+    padding-left: 4%;
+  }
+ 
+
+
   a{
     @include fontsStyle($font_1,2rem,#727f88);
     margin: 0 2%;
@@ -2234,7 +2429,11 @@ padding-top: 40px;
      
     }
 
-
+    @media only screen and (max-width: 767px) {
+      text-align: left;
+     
+    }
+   
 
   }
 }
@@ -2289,7 +2488,29 @@ padding-top: 40px;
     }
   }
 
+
+
+  
+@media only screen and (max-width: 767px){
+  width: 400px;
+  grid-template-columns: 20.5% 20.5% 18.5% 11.5% 13.5%;
+
+  img:nth-child(4){
+    padding-top:10px;
+  }
+
+  img:nth-child(5){
+    padding-top:10px;
+  }
+
+
 }
+
+
+
+}
+
+
 
 .partner_img{
   padding-top: 14px;
