--- a/painogen/scss/style.scss
+++ b/painogen/scss/style.scss
@@ -29,6 +29,8 @@ body{
     width: 84%;
      
    }
+
+  
 }
 
 
@@ -164,6 +166,11 @@ body{
 
     background: #fafafa;
 
+    position: absolute;
+    width: 100%;
+    z-index: 999;
+    top: 0;
+
   }
 
 
@@ -295,40 +302,51 @@ body{
 /*Slider*/
 
 #section_1 {
-  margin-top: 50px;
-
+  margin-top: 161px;
+  width: 100%;
 
   
-  @media only screen and (max-width: 1200px) {
-    margin-top: 50px;
-    width: 825px;
+  @media only screen and (max-width: 992px) {
+   
+    margin-top: 115px;
    }
-
-   @media only screen and (max-width: 992px) {
+/*
+   @media only screen and (max-width: 767px) {
    
     width: 600px;
    }
    
 
    
-   @media only screen and (max-width: 600px) {
+   @media only screen and (max-width: 420px) {
    
     width: 300px;
    }
-   
+   */
 
 
-  @media only screen and (max-width: 600px) {
+  /*@media only screen and (max-width: 600px) {
     width: 4%;
     min-width: 300px;;
-   }
+   }*/
 }
 
 #blockSlid{
 
   .logoSlider{
-    min-width: 58px;
-    width: 6%;
+    //min-width: 58px;
+    width: 12%;
+    @media only screen and (max-width: 1500px) {
+     width: 10%;
+     }
+
+     @media only screen and (max-width: 1300px) {
+      width: 8%;
+      }
+
+      @media only screen and (max-width: 992px) {
+        width: 11%;
+        }
   }
     
   @extend .m_auto;
@@ -342,6 +360,10 @@ body{
     @extend .t-align;
 
     font-size: 18px;
+
+    @media only screen and (max-width: 767px) {
+      font-size: 15px;
+      }
   }
 
   button {
@@ -356,30 +378,54 @@ body{
     outline: none;
     border:none;
     margin-top: 24px;
-
+    @media only screen and (max-width: 767px) {
+      width: 9rem;
+      height: 3rem;
+      font-size: 16px;
+      }
   }
 
-  h1{
-   text-align: center;
-    @include fontsStyle($font_2,95px,$color_2);
+  #top_slid_text_block{
 
-    @media only screen and (max-width: 1300px) {
-      font-size: 70px;
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+    @media only screen and (max-width: 767px) {
+      width: 53%;
      }
 
-    @media only screen and (max-width: 992px) {
-      font-size: 60px;
+     @media only screen and (max-width: 327px) {
+      width: 57%;
      }
-
     
-     @media only screen and (max-width: 992px) {
-      font-size: 50px;
-     }
-
-   
+  h1{
+    text-align: center;
+     @include fontsStyle($font_2,95px,$color_2);
  
+     @media only screen and (max-width: 1650px) {
+       font-size: 70px;
+      }
+ 
+    
+ 
+      @media only screen and (max-width: 1300px) {
+        font-size: 50px;
+       }
+
+       @media only screen and (max-width: 767px) {
+        font-size: 40px;
+       }
+
+       @media only screen and (max-width: 425px) {
+        font-size: 30px;
+       }
+  
+ 
+   }
+
 
   }
+
 
   
 }
@@ -398,6 +444,13 @@ body{
     margin-top: 13%;
     border-radius: 50%;
   }
+
+
+  @media only screen and (max-width: 425px) {
+    width: 18px;
+    height: 18px
+   }
+
 }
 
 
@@ -413,12 +466,30 @@ body{
     grid-column-gap: 13px;
     //top: 123%;
     top: 156%;
-    right:0%;
+    right:-20%;
 
    
 
     
+   
+    @media only screen and (max-width: 1650px) {
+     
+      right: -5%;
+     
+     }
 
+      
+    @media only screen and (max-width: 1400px) {
+     
+      right: 0%;
+     
+     }
+
+     @media only screen and (max-width: 1300px) {
+     
+      right: 2%;
+     
+     }
 
      
     @media only screen and (max-width: 1300px) {
@@ -429,9 +500,20 @@ body{
 
     
 
-    @media only screen and (max-width: 600px) {
-      width: 169px;
-      left: 59px;
+    @media only screen and (max-width: 767px) {
+      width: 145px;
+      left: 23px;
+      margin: 0 auto;
+      margin-top: 30px;
+      grid-column-gap: 13px;
+     
+    }
+
+    @media only screen and (max-width: 425px) {
+      width: 145px;
+      left: 23px;
+      margin: 0 auto;
+      margin-top: 45px;
       grid-column-gap: 13px;
      
     }
@@ -492,6 +574,10 @@ body{
     @media only screen and (max-width: 991px) {
       width: 6%;
     }
+
+    @media only screen and (max-width: 767px) {
+      width: 10%;
+    }
   }
 }
 
@@ -500,10 +586,11 @@ body{
 /*..............section_2.............*/
 
 #section_2{
-  margin-top: 235px;
+ // margin-top: 235px;
+ margin-top: 300px;
   @media only screen and (max-width: 1650px) {
     width: 1094px;
-    margin-top: 166px;
+    //margin-top: 166px;
   }
   @media only screen and (max-width: 1300px) {
     width: 937px;
@@ -515,11 +602,16 @@ body{
   @media only screen and (max-width: 767px) {
     width: 400px;
   }
-  /*
-  @media only screen and (max-width: 767px) {
-    width: 52%;
-    min-width: 300px;
-  }*/
+
+  @media only screen and (max-width: 425px) {
+    margin-top: 200px;
+    
+  }
+  
+  @media only screen and (max-width: 420px) {
+    width: 250px
+    
+  }
 }
 
 
@@ -573,6 +665,11 @@ body{
   @media only screen and (max-width: 1190px) {
     width: 49%;
    }
+
+   @media only screen and (max-width: 420px) {
+    width: 87%;
+   }
+
 }
 
 
@@ -685,9 +782,14 @@ body{
 
   @media only screen and (max-width: 767px) {
     width: 400px;
-   
+    margin-top: 70px;
   }
 
+
+  @media only screen and (max-width: 420px) {
+    width: 250px;
+   
+  }
   
  /* @media only screen and (max-width: 1600px) {
     width: 825px;
@@ -729,6 +831,12 @@ body{
     width:44%;
     margin-top:42px;
   }
+
+  @media only screen and (max-width: 420px) {
+    width:69%;
+   
+  }
+
 }
 
 
@@ -854,11 +962,11 @@ body{
     width: 400px;
     margin-top: 140px;
   }
-/*
-  @media only screen and (max-width: 767px) {
-    width: 52%;
-    min-width: 300px;
-  }*/
+
+  @media only screen and (max-width: 420px) {
+    width: 250px;
+    min-width: 70px;
+  }
 }
 
 //...........section 4 global style 
@@ -1009,15 +1117,12 @@ body{
     width: 58%;
     margin-top: 0;
   }
- /* @media only screen and (max-width: 1600px) {
-    width: 93.482821%;
-    margin-top: 74px;
+  @media only screen and (max-width: 420px) {
+    width: 78%;
+    margin-top: 70px;
   }
 
-  @media only screen and (max-width: 992px) {
-    
-    margin-top: 0;
-  }*/
+ 
 }
 
 
@@ -1026,6 +1131,12 @@ body{
     width: 87%;
     
   }
+
+  @media only screen and (max-width: 420px) {
+    width: 100%;
+    
+  }
+
 }
 
 
@@ -1107,6 +1218,10 @@ body{
     margin-top: 140px;
   }
  
+
+  @media only screen and (max-width: 420px) {
+    margin-top: 70px;
+  }
  
 }
 
@@ -1129,11 +1244,11 @@ body{
     width: 38%;
     margin-top: 63px;
   }
-/*
+
   @media only screen and (max-width: 992px) {
-    margin-top: 60px;
-    width: 48%;
-  }*/
+    
+    width: 65%;
+  }
 }
 
 
@@ -1150,6 +1265,14 @@ body{
       width: 91%;
     
   }
+
+  
+  @media only screen and (max-width: 420px) {
+    
+    
+    width: 100%;
+  
+}
 
 }
 
@@ -1190,7 +1313,13 @@ margin-top: 221px;
     
     margin-top: 30px;
  
-}
+  }
+
+  @media only screen and (max-width: 420px) {
+    
+   width: 82%;
+ 
+  }
   
    
  }
@@ -1209,6 +1338,12 @@ margin-top: 221px;
     width: 97%;
     
   }
+
+  @media only screen and (max-width: 420px) {
+    width: 100%;
+    
+  }
+
 }
 
 
@@ -1221,6 +1356,11 @@ margin-top: 221px;
   position: relative;
   img{
     position: absolute;
+
+    @media only screen and (max-width: 420px) {
+      width: 50px;
+      
+    }
   }
 }
 
@@ -1266,6 +1406,11 @@ margin-top: 221px;
     margin-top: 150px;
    }
 
+   @media only screen and (max-width: 420px) {
+    width: 250px;
+    margin-top: 70px;
+   }
+
 }
 
 
@@ -1296,10 +1441,10 @@ margin-top: 221px;
     margin-top: 140px;
    }
 
-   /*@media only screen and (max-width: 767px) {
-    width: 52%;
-    min-width: 300px;
-   }*/
+   @media only screen and (max-width: 420px) {
+    width: 250px;
+    margin-top: 70px;
+   }
 }
 
 .contetn_text_part_4 {
@@ -1337,6 +1482,11 @@ margin-top: 221px;
  @media only screen and (max-width: 1190px) {
    width: 40%;
   }
+
+  @media only screen and (max-width: 420px) {
+    width: 70%;
+   }
+
 }
 
 
@@ -1372,6 +1522,9 @@ margin-top: 221px;
     position: absolute;
     top: -59vh;
     right: 0;
+    @media only screen and (max-width: 767px) {
+      width: 16%;
+    }
   }
 
  }
@@ -1421,6 +1574,10 @@ margin-top: 221px;
    @media only screen and (max-width: 767px) {
     width: 400px;
    }
+
+   @media only screen and (max-width: 420px) {
+    width: 250px;
+  }
  }
 
 #navTabBlock {
@@ -1433,6 +1590,12 @@ margin-top: 221px;
    @media only screen and (max-width: 992px) {
       width: 381px;
     }
+
+    @media only screen and (max-width: 420px) {
+      width: 88.5%;
+    }
+
+   
 /*
     @media only screen and (max-width: 767px) {
       width: 100%;
@@ -1464,9 +1627,9 @@ margin-top: 221px;
       font-size: 15px;
      }
 
-    /* @media only screen and (max-width: 337px) {
-     // font-size: 14px
-     }*/
+    @media only screen and (max-width: 420px) {
+      font-size: 8px
+     }
 
      
   }
@@ -1491,6 +1654,11 @@ margin-top: 221px;
      @media only screen and (max-width: 767px) {
       font-size: 15px;
      }
+
+     @media only screen and (max-width: 420px) {
+      font-size: 8px
+     }
+
  }
 
  
@@ -1574,6 +1742,12 @@ margin-top: 221px;
      grid-row-gap: 80px;
      
   }
+
+  @media only screen and (max-width: 420px) {
+    grid-template-columns: auto;
+     grid-row-gap: 80px;
+     
+  }
   
 }
 
@@ -1619,6 +1793,10 @@ margin-top: 221px;
      }
      @media only screen and (max-width: 767px) {
       font-size: 15px;
+     }
+
+     @media only screen and (max-width: 420px) {
+      font-size: 16px;
      }
 
       /*@media only screen and (max-width: 998px) {
@@ -1712,6 +1890,11 @@ margin-top: 221px;
           
           }
 
+          @media only screen and (max-width: 420px) {
+            width: 250px;
+            
+            }
+
 
     @extend .grid;
     grid-template-columns: auto auto;
@@ -1750,10 +1933,16 @@ margin-top: 221px;
        border:9px solid $color_6;
       }
 
+
     }
 
     @media only screen and (max-width: 767px) {
       width: 40%;
+      margin: 0 auto;
+    }
+
+    @media only screen and (max-width: 420px) {
+      width: 58%;
       margin: 0 auto;
     }
     
@@ -1801,6 +1990,11 @@ margin-top: 221px;
       }
       @media only screen and (max-width: 767px) {
         text-align: center;
+      }
+
+      @media only screen and (max-width: 420px) {
+        font-size:10px;
+        line-height: 25px;
       }
     }
 
@@ -1850,7 +2044,8 @@ margin-top: 221px;
      }
     
      @media only screen and (max-width: 767px) {
-      margin-left: 37%;
+       grid-column-gap:20px;
+      margin: 0 auto;
        margin-top: 18px;
     }
 
@@ -1876,6 +2071,12 @@ margin-top: 221px;
         height: 54px;
         display: block;
         margin-right: 20px;
+       }
+
+         
+      @media only screen and (max-width: 1190px) {
+        
+        margin: 0 auto;
        }
 
     }
@@ -1924,10 +2125,10 @@ margin-top: 221px;
   
    }
 
-   /*@media only screen and (max-width: 450px) {
-    max-width:277px;
+   @media only screen and (max-width: 420px) {
+    max-width: 250px;
   
-   }*/
+   }
 
    
   margin:0 auto;
@@ -2013,6 +2214,10 @@ margin-top: 221px;
       @media only screen and (max-width: 1190px) {
         font-size: 15px;
       }
+
+      @media only screen and (max-width: 420px) {
+        font-size: 12px;
+      }
     
     }
 
@@ -2066,6 +2271,14 @@ margin-top: 221px;
 
   }
 
+  @media only screen and (max-width: 420px) {
+    width: 74%;
+    height: 34px;
+    font-size: 11px;
+   
+
+  }
+
 }
 
 #join_btn{
@@ -2098,6 +2311,14 @@ margin-top: 221px;
 
   @media only screen and (max-width: 767px) {
     right: 13%;
+
+  }
+
+  @media only screen and (max-width: 420px) {
+    width: 82px;
+    height: 34px;
+    font-size: 11px;
+    right: 0;;
 
   }
 
@@ -2143,6 +2364,11 @@ margin-top: 221px;
 
      @media only screen and (max-width: 767px) {
       width: 430px;
+     
+     }
+
+     @media only screen and (max-width: 420px) {
+     padding-left: 11%;
      
      }
 
@@ -2366,7 +2592,20 @@ padding-top: 40px;
         font-size: 14px;
         
        }
+       
+
+       @media only screen and (max-width: 420px) {
+        font-size: 10px;
+        
+       }
     }
+
+    @media only screen and (max-width: 420px) {
+      span{
+        font-size: 10px;
+      }
+     }
+
   }
   p>span{
     margin: 0 2%;
@@ -2396,6 +2635,12 @@ padding-top: 40px;
  }
 
 
+ @media only screen and (max-width: 420px) {
+  
+  #last_text_footer {
+    font-size: 9px;
+  }
+ }
 
 /*  bank pay carts*/
 
@@ -2506,7 +2751,9 @@ padding-top: 40px;
 
 }
 
-
+@media only screen and (max-width: 420px){
+  width: 250px;
+}
 
 }
 
