--- a/painogen/css/style.css
+++ b/painogen/css/style.css
@@ -129,7 +129,7 @@ header {
   background: #fafafa;
   position: absolute;
   width: 100%;
-  z-index: 999;
+  z-index: 20;
   top: 0; }
 
 #headNav {
@@ -380,16 +380,17 @@ header {
 .bgCoIMG img {
   position: absolute; }
 .bgCoIMG img:nth-child(1) {
-  width: 21%;
+  width: 13%;
   left: 0;
   top: 150px; }
   @media only screen and (max-width: 991px) {
     .bgCoIMG img:nth-child(1) {
       width: 17%; } }
 .bgCoIMG img:nth-child(2) {
-  width: 9%;
+  width: 7%;
   top: 80px;
-  right: 0; }
+  right: 0;
+  z-index: 50; }
   @media only screen and (max-width: 991px) {
     .bgCoIMG img:nth-child(2) {
       width: 6%; } }
